--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.0
 Date: 2017-07-26
 Author: Antoine Champion
 Maintainer: Antoine Champion <antoine.champion@outlook.com>
-Description: Introduces some and none, as well as match_with from functional languages.
+Description: Introduces some() and none, as well as match_with() from functional languages.
 License: Boost Software License 1.0
 Imports: methods, magrittr
 RoxygenNote: 5.0.1
