--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: optional
 Type: Package
-Title: Optional Types and Pattern Matching
+Title: Option Types and Pattern Matching
 Version: 1.1
 Date: 2018-05-04
 Author: Antoine Champion
 Maintainer: Antoine Champion <antoine.champion@outlook.com>
 Description: Introduces some() and none, as well as match_with() from functional languages.
-License: file LICENSE
+License: BSL
 Imports: methods, magrittr
 RoxygenNote: 6.0.1
 Suggests: knitr, rmarkdown
