update to version 2.0

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: optional
 Type: Package
-Title: Option Types and Pattern Matching
-Version: 1.1
+Title: Optional Types and Pattern Matching
+Version: 2.0
 Date: 2018-05-04
 Author: Antoine Champion
 Maintainer: Antoine Champion <antoine.champion@outlook.com>
-Description: Introduces some() and none, as well as match_with() from functional languages.
+Description: Introduces optional types with some() and none, as well as match_with() from functional languages.
 License: BSL
 Imports: methods, magrittr
 RoxygenNote: 6.0.1
