--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(make_opt)
 export(match_with)
 export(none)
 export(opt_unwrap)
+export(option)
 export(some)
 importFrom(magrittr,"%>%")
 importFrom(methods,formalArgs)
